--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Gatik</title>
 </head>
 <body>
-<h1>Hello Gatik. it is a great course</h1>
+<h1>Hello Gatik. it is a great course. testing pull</h1>
 </body>
 </html>
